--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -14,107 +14,111 @@
 
 <body class="body-lineup">
 <!-- ============ header ========== -->
-    <header>
-
-         <div class="navbar">
-            <img src="../assets/img/toggle-white.png" alt="" class="menu-btn shadow">
-            <div class="menu-container">
-                <div class="nav-links mb-5">
-                    <ul>
-                        <li><a href="../index.html">ACCUEIL</a></li>
-                        <li><a href="../autres/ticket.html">TICKETS</a></li>
-                        <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
-                        <li><a href="volunteer.html">BÉNÉVOLE</a></li>
-                        <li><a href="../autres/infos.html">INFOS</a></li>
-                    </ul>
-                </div>
+<header>
+    <div class="navbar">
+        <img src="/assets/img/toggle-white.png" alt="" class="menu-btn shadow">
+        <div class="menu-container">
+            <div class="nav-links">
+                <ul>
+                    <li><a href="../index.html" class="nav-h">HOME</a></li>
+                    <li><a href="../autres/ticket.html" class="nav-t">TICKETS</a></li>
+                    <li><a href="../autres/lineup.html" class="nav-l">LINE-UP</a></li>
+                    <li><a href="../autres/volunteer.html" class="nav-v">VOLUNTEER</a></li>
+                    <li><a href="../autres/infos.html" class="nav-i">INFOS</a></li>
+                </ul>
             </div>
         </div>
+    </div>
 </header>
+
 
     <!-- ========== fin header ========== -->
     <!-- ========== main ========== -->
 
-    <main class="text-center pt-5 pb-5">
+    <main class="text-center pb-5">
         <div class="text-center text-white ">
-            <h1 class="pt-5"> ALL LINE-UP</h1>
-            <br>
+            <div class="p-5 text-center">
+                <h1 class="m-5 titre-autres"> ALL LINE-UP </h1>
+            </div>            <br>
             <div class=" row row-cols-1 row-cols-lg-5 d-flex justify-content-evenly p-5 ">
                 <a href="lineup.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100 text-center  ">All</button></a>
-                <a href="../autres/friday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Friday 1st</button></a>
-                <a href="../autres/saturday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Saturday 2nd</button></a>
-                <a href="../autres/sunday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100 text-center ">Sunday 3rd</button></a>
+                <a href="friday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Friday 1st</button></a>
+                <a href="saturday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Saturday 2nd</button></a>
+                <a href="sunday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100 text-center ">Sunday 3rd</button></a>
             </div>
 
             <br>
             <div class=" row row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-evenly m-lg-5">
                 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="box rounded-5 p-0 ">
+                    <a href="https://fr.wikipedia.org/wiki/1PLIK%C3%89140"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="box rounded-3 p-0 ">
                     <p class="mt-3">1plike Prime</p></a>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/fraise.jpg_large" alt="ASAP" class="box rounded-5 p-0   ">
-                    <p class="mt-3">Fraise</p>
+                     <a href="https://fr.wikipedia.org/wiki/Fraise"><img src="../assets/img/fraise.jpg_large" alt="ASAP" class="box rounded-3 p-0   ">
+                     </a>                 <p class="mt-3">Fraise</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="box rounded-5 p-0   ">
+                    <a href="https://fr.wikipedia.org/wiki/Jerry_L%C3%A9onide"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="box rounded-3 p-0   ">
                         <p class="mt-3">Mr. Léonide</p></a>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/gattouz.png" alt="gattouz" class="box rounded-5 p-0   ">
-                    <p class="mt-3">Gattouz</p>
+                <div class="col colx m-1">
+                     <a href="https://www.instagram.com/0zuottag/?hl=fr"><img src="../assets/img/gattouz.png" alt="gattouz" class="box rounded-3 p-0   ">
+                     </a>               <p class="mt-3">Gattouz</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/fave.jpg" alt="macaron" class="box rounded-5 p-0   ">
-                    <p class="mt-3"> FAVÉÉÉ</p>
+                     <a href="https://fr.wikipedia.org/wiki/Fav%C3%A9_(rappeur)"><img src="../assets/img/fave.jpg" alt="macaron" class="box rounded-3 p-0   ">
+                     </a>            <p class="mt-3"> FAVÉÉÉ</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="box rounded-5 p-0   ">
+                    <a href="https://fr.wikipedia.org/wiki/Bart_Simpson"><img src="../assets/img/bart.jpg" alt="El Barto" class="box rounded-3 p-0   ">
                         <p class="mt-3">El Barto</p></a>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/kaaris.PNG" alt="pims" class="box rounded-5 p-0   ">
-                    <p class="mt-3">Kaaris</p>
-                </div>
-
-                <div class="col colx m-1"><img src="../assets/img/furry.jpg" alt="ASAP" class="box rounded-5 p-0   ">
-                    <p class="mt-3">Timéo </p>
-                </div>
-
-                <div class="col colx m-1"><img src="../assets/img/kitty.gif" alt="kitty" class="box rounded-5 p-0   ">
-                    <p class="mt-3">Hello Kitty</p>
-                </div>
-
-                <div class="col colx m-1"><img src="../assets/img/jew.gif" alt="macaron" class="box rounded-5 p-0   ">
-                    <p class="mt-3">J.E.W.</p>
-                </div>
-
-                <div class="col colx m-1"><img src="../assets/img/bassem.jpg" alt="macaron" class="box rounded-5 p-0   ">
-                    <p class="mt-3">Bassem</p>
-                </div>
-
-                <div class="col colx m-1"><img src="../assets/img/frog.jpg" alt="bee" class="box rounded-5 p-0   ">
-                    <p class="mt-3">Crazy Frog</p>
+                <div class="col colx m-1"> <a href="https://fr.wikipedia.org/wiki/Kaaris"><img src="../assets/img/kaaris.PNG" alt="pims" class="box rounded-3 p-0   ">
+                </a>           <p class="mt-3">Kaaris</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/kirby.jpg" alt="ASAP" class="box rounded-5 p-0   ">
-                    <p class="mt-3">Astérion</p>
+                    <a href="https://fr.wikipedia.org/wiki/Fandom_furry">
+                        <img src="../assets/img/furry.jpg" alt="ASAP" class="box rounded-3 p-0   ">
+                </a><p class="mt-3">Timéo </p>
+                </div>
+
+                <div class="col colx m-1"> <a href="https://fr.wikipedia.org/wiki/Hello_Kitty"><img src="../assets/img/kitty.gif" alt="kitty" class="box rounded-3 p-0   ">
+                </a>           <p class="mt-3">Hello Kitty</p>
+                </div>
+
+                <div class="col colx m-1"> <a href="https://fr.wikipedia.org/wiki/Hello_Kitty"><img src="../assets/img/jew.gif" alt="macaron" class="box rounded-3 p-0   ">
+                </a>           <p class="mt-3">J.E.W.</p>
+                </div>
+
+                <div class="col colx m-1"> <a href="https://fr.wikipedia.org/wiki/Bassem"><img src="../assets/img/bassem.jpg" alt="macaron" class="box rounded-3 p-0   ">
+                </a>              <p class="mt-3">Bassem</p>
+                </div>
+
+                <div class="col colx m-1"> <a href="https://en.wikipedia.org/wiki/Crazy_Frog"><img src="../assets/img/frog.jpg" alt="bee" class="box rounded-3 p-0   ">
+                </a>        <p class="mt-3">Crazy Frog</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="box rounded-5 p-0   ">
+                     <a href="https://fr.wikipedia.org/wiki/Ast%C3%A9rion"><img src="../assets/img/kirby.jpg" alt="ASAP" class="box rounded-3 p-0   ">
+                     </a>          <p class="mt-3">Astérion</p>
+                </div>
+
+                <div class="col colx m-1">
+                    <a href="https://fr.wikipedia.org/wiki/Ronald_Goldman"><img src="../assets/img/julien.png" alt="julien Naty" class="box rounded-3 p-0   ">
                         <p class="mt-3">Julien Naty</p></a>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/bee.gif" alt="bee" class="box rounded-5 p-0   ">
-                    <p class="mt-3">Killer Bee</p>
+                     <a href="https://naruto.fandom.com/fr/wiki/Killer_B"><img src="../assets/img/bee.gif" alt="bee" class="box rounded-3 p-0   ">
+                     </a>       <p class="mt-3">Killer Bee</p>
                 </div>
             </div>
         </div>
@@ -170,7 +174,7 @@
                         <tr>
                             <td class="bg-transparent text-white"> 5PM - 6PM</td>
                             <td class="bg-white text-secondary"> FAVÉÉÉ </td>
-                            <td class="bg-white text-secondary">Kaaris </td>
+                            <td class="bg-transparent text-secondary"> </td>
                             <td class="bg-transparent text-white"> </td>
                         </tr>
                     </tbody>
@@ -178,7 +182,7 @@
                         <tr>
                             <td class="bg-transparent text-white"> 6PM - 7PM</td>
                             <td class="bg-transparent text-white"> </td>
-                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-white text-secondary">Kaaris </td>
                             <td class="bg-white text-secondary">El Barto</td>
                         </tr>
                     </tbody>
