--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="menu-container">
                 <div class="nav-links">
                     <ul>
-                        <li><a href="index.html">ACCUEIL</a></li>
-                        <li><a href="autres/ticket.html">TICKETS</a></li>
-                        <li><a href="autres/lineup.html">PROGRAMMATION</a></li>
-                        <li><a href="autres/volunteer.html">BÉNÉVOLE</a></li>
-                        <li><a href="autres/infos.html">INFOS</a></li>
+                        <li><a href="index.html" class="nav-h">HOME</a></li>
+                        <li><a href="autres/ticket.html" class="nav-t">TICKETS</a></li>
+                        <li><a href="autres/lineup.html" class="nav-l">LINE-UP</a></li>
+                        <li><a href="autres/volunteer.html" class="nav-v">VOLUNTEER</a></li>
+                        <li><a href="autres/infos.html" class="nav-i">INFOS</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,9 +41,8 @@
     <main class="d-flex flex-column">
         <div class=" text-center">
             <div class="p-5">
-                <h1 class="m-5 pb-5 titre"> EFREI'STIVAL</h1>
+                <h1 class="mt-5 mb-5 titre"> EFREI'STIVAL</h1>
                 <h2 class="m-5 date"> 1st, 2nd and 3rd august 2025</h2>
-                <h2 class="palestine"> 100% OF PROCEEDS DONATED TO PALESTINE</h2>
                 <br>
             </div>
 
@@ -56,7 +55,7 @@
                 </div>
             </div>
 
-            <div class="box text-white  p-5 vh-60  shadow ">
+            <div class=" text-white  p-5 vh-60  shadow ">
                 <h1 class="mb-5"> JOIN US IN : </h1>
                 <div id="countdown">
                     <div id="timer">
@@ -65,9 +64,21 @@
                         <span id="minutes">--</span>MIN
                         <span id="seconds">--</span>SEC
                     </div>
+                    <div class="mt-5">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
+                                width="70%"
+                                height=""
+                                style="border:0;"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"
+                                class="col ">
+                        </iframe>
+                    </div>
                 </div>
             </div>
         </div>
+
     </main>
 
     <!-- ========== fin main ========== -->
