--- a/autres/sunday.html
+++ b/autres/sunday.html
@@ -5,162 +5,162 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sunday</title>
+  <title>LINE-UP</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/style.css">
   <script src="../assets/index.js" defer></script>
 </head>
 
-<body>
+<body class="body-lineup">
 <!-- ============ header ========== -->
 <header>
   <div class="navbar">
-    <img src="../assets/img/toggle-white.png" alt="" class="menu-btn shadow">
+    <img src="/assets/img/toggle-white.png" alt="" class="menu-btn shadow">
     <div class="menu-container">
-      <div class="nav-links mb-5">
+      <div class="nav-links">
         <ul>
-          <li><a href="../index.html">ACCUEIL</a></li>
-          <li><a href="../autres/ticket.html">TICKETS</a></li>
-          <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
-          <li><a href="volunteer.html">BÉNÉVOLE</a></li>
-          <li><a href="../autres/infos.html">INFOS</a></li>
+          <li><a href="../index.html" class="nav-h">HOME</a></li>
+          <li><a href="../autres/ticket.html" class="nav-t">TICKETS</a></li>
+          <li><a href="../autres/lineup.html" class="nav-l">LINE-UP</a></li>
+          <li><a href="../autres/volunteer.html" class="nav-v">VOLUNTEER</a></li>
+          <li><a href="../autres/infos.html" class="nav-i">INFOS</a></li>
         </ul>
       </div>
     </div>
   </div>
 </header>
 
+
 <!-- ========== fin header ========== -->
 <!-- ========== main ========== -->
 
-<main class="text-center">
-  <div class=" text-white bg-transparent vh-50  p-5">
-    <h1 class="pb-5"> DISCOVER THE LINE-UP</h1>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
-  </div>
-
-  <div class="box text-center text-white m-5 rounded-5 shadow-lg">
-    <h1 class="pt-5 pb-5"> SUNDAY 3rd AUGUST</h1>
-    <br>
-    <div class="prog row  row-cols-1 row-cols-md-1 row-cols-lg-5 d-flex justify-content-center  ">
-      <a href="lineup.html"><button type="submit" class="bouton col  rounded-5 m-2 p-2 w-75 text-center text-white">All</button></a>
-      <a href="../autres/friday.html"><button type="submit" class="bouton col  rounded-5 m-2 p-2 w-75  text-center text-white">Friday 1st</button></a>
-      <a href="../autres/saturday.html"><button type="submit" class="bouton col  rounded-5 m-2 p-2 w-75  text-center text-white">Saturday 2nd</button></a>
-      <a href="../autres/sunday.html"><button type="submit" class="bouton col  rounded-5 m-2 p-2 w-75 text-center text-white">Sunday 3rd</button></a>
+<main class="text-center pb-5">
+  <div class="text-center text-white ">
+    <div class="p-5 text-center">
+      <h1 class="m-5 titre-autres"> SUNDAY 3rd AUGUST </h1>
+    </div>            <br>
+    <div class=" row row-cols-1 row-cols-lg-5 d-flex justify-content-evenly p-5 ">
+      <a href="lineup.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100 text-center  ">All</button></a>
+      <a href="friday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Friday 1st</button></a>
+      <a href="saturday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Saturday 2nd</button></a>
+      <a href="sunday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100 text-center ">Sunday 3rd</button></a>
     </div>
 
-
     <br>
-    <div class=" row  row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-center  m-lg-5">
-      <div class="col colx m-3">
-        <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle  ">
-          <p>1plike Prime</p></a>
+    <div class=" row row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-evenly m-lg-5">
+
+      <div class="col colx m-1">
+        <a href="https://fr.wikipedia.org/wiki/1PLIK%C3%89140"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="box rounded-3 p-0 ">
+          <p class="mt-3">1plike Prime</p></a>
       </div>
 
-      <div class="col colx m-3 ">
-        <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-circle border-2 ">
-          <p>Mr. Léonide</p></a>
+
+      <div class="col colx m-1">
+        <a href="https://fr.wikipedia.org/wiki/Jerry_L%C3%A9onide"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="box rounded-3 p-0   ">
+          <p class="mt-3">Mr. Léonide</p></a>
       </div>
 
-      <div class="col colx m-3">
-        <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
-          <p>El Barto</p></a>
+      <div class="col colx m-1">
+        <a href="https://fr.wikipedia.org/wiki/Bart_Simpson"><img src="../assets/img/bart.jpg" alt="El Barto" class="box rounded-3 p-0   ">
+          <p class="mt-3">El Barto</p></a>
       </div>
 
-      <div class="col colx m-3"><img src="../assets/img/kitty.gif" alt="kitty" class="rounded-circle border-2 ">
-        <p>Hello Kitty</p>
+      <div class="col colx m-1"> <a href="https://fr.wikipedia.org/wiki/Hello_Kitty"><img src="../assets/img/kitty.gif" alt="kitty" class="box rounded-3 p-0   ">
+      </a>           <p class="mt-3">Hello Kitty</p>
       </div>
 
-      <div class="col colx m-3">
-        <img src="../assets/img/kirby.jpg" alt="ASAP" class="rounded-circle border-2 ">
-        <p>Astérion</p>
+      <div class="col colx m-1">
+        <a href="https://fr.wikipedia.org/wiki/Ast%C3%A9rion"><img src="../assets/img/kirby.jpg" alt="ASAP" class="box rounded-3 p-0   ">
+        </a>          <p class="mt-3">Astérion</p>
       </div>
+
     </div>
   </div>
   <br>
-  <div class="box text-center text-white  m-5 wh-100 rounded-5">
+  <div class="box text-center text-white wh-100 ">
     <div class="m-5">
-      <h1 class="pt-5">SCHEDULE</h1>
+      <h1 class="">SCHEDULE</h1>
     </div>
 
     <div class="w-100 pb-5">
-      <table class="table table-bordered w-75 w-lg-50 mx-auto">
+      <table class="table table-bordered w-75 w-lg-50 mx-auto ">
         <thead>
         <tr>
-          <th class="bg-dark text-white">TIME</th>
-          <th class="bg-dark text-white">SUN. 3</th>
+          <th class="bg-transparent text-white">TIME</th>
+
+          <th class="bg-transparent text-white">SUN. 3</th>
         </tr>
         </thead>
         <tbody>
         <tr >
-          <td class="bg-dark text-white"> 1PM</td>
+          <td class="bg-transparent text-white"> 1PM</td>
           <td class="bg-primary text-white"> Open</td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 2PM - 3PM</td>
-          <td class="bg-dark text-white"> </td>
+          <td class="bg-transparent text-white"> 2PM - 3PM</td>
+          <td class="bg-transparent text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 3PM - 4PM</td>
-          <td class="bg-dark text-white"> </td>
+          <td class="bg-transparent text-white"> 3PM - 4PM</td>
+          <td class="bg-transparent text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 4PM - 5PM</td>
-          <td class="bg-secondary text-white">Astérion </td>
+          <td class="bg-transparent text-white"> 4PM - 5PM</td>
+          <td class="bg-white text-secondary">Astérion </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 5PM - 6PM</td>
-          <td class="bg-dark text-white"> </td>
+          <td class="bg-transparent text-white"> 5PM - 6PM</td>
+          <td class="bg-transparent text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 6PM - 7PM</td>
-          <td class="bg-secondary text-white">El Barto</td>
+          <td class="bg-transparent text-white"> 6PM - 7PM</td>
+          <td class="bg-white text-secondary">El Barto</td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 7PM - 8PM</td>
-          <td class="bg-secondary text-white"> 1pliké140 prime</td>
+          <td class="bg-transparent text-white"> 7PM - 8PM</td>
+          <td class="bg-white text-secondary"> 1pliké140 prime</td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 8PM - 9PM</td>
-          <td class="bg-secondary text-white">Hello Kitty </td>
+          <td class="bg-transparent text-white"> 8PM - 9PM</td>
+          <td class="bg-white text-secondary">Hello Kitty </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 9PM - 10PM</td>
-          <td class="bg-dark text-white"> </td>
+          <td class="bg-transparent text-white"> 9PM - 10PM</td>
+          <td class="bg-transparent text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 10PM - 11PM</td>
-          <td class="bg-secondary text-white"> Mr. Léonide</td>
+          <td class="bg-transparent text-white"> 10PM - 11PM</td>
+          <td class="bg-white text-secondary"> Mr. Léonide</td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 11PM - 12PM</td>
-          <td class="bg-dark text-white"> </td>
+          <td class="bg-transparent text-white"> 11PM - 12PM</td>
+          <td class="bg-transparent text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td class="bg-dark text-white"> 1AM</td>
+          <td class="bg-transparent text-white"> 1AM</td>
           <td class="bg-danger text-white"> Closed</td>
         </tr>
         </tbody>
@@ -171,7 +171,7 @@
 <!-- ========== fin main ========== -->
 <!-- ========== footer ========== -->
 <footer>
-  <div class="m-2">
+  <div class="m-2 text-center">
     <h6>Copyright &copy; 2025 — All rights reserved.</h6>
     <h6>Designed by
       <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
@@ -181,5 +181,6 @@
     </h6>
   </div>
 </footer>
+<!-- ========== fin footer ========== -->
 </body>
 </html>
