--- a/autres/ticket.html
+++ b/autres/ticket.html
@@ -43,7 +43,7 @@
 
     <div>
       <div class="p-5 text-center">
-        <h1 class="m-5 titre-autres"> RESERVE YOUR PLACES </h1>
+        <h1 class="m-5 titre-autres"> BUY TICKETS </h1>
       </div>
 
       <div class="text-center row row-cols-1 row-cols-md-5 justify-content-evenly pb-5 pe-5 ps-5 g-5 text-black">
