--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <div class=" text-white  p-5 vh-60  ">
                 <div class=" row  row-cols-1 row-cols-lg-5 d-flex justify-content-evenly ">
-                    <a href="autres/ticket.html"><button type="submit" class="t box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow ">BUY TICKETS</button></a>
+                    <a href="autres/ticket.html"><button type="submit" class="t box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow ">RESERVE YOUR PLACES</button></a>
                     <a href="autres/lineup.html"><button type="submit" class="d box col mt-2 mb-2  p-4 w-100  text-center border border-5  shadow ">DISCOVER THE LINE-UP</button></a>
                     <a href="autres/volunteer.html"><button type="submit" class="b box col mt-2 mb-2  p-4 w-100  text-center border border-5  shadow">BECOME VOLUNTEER</button></a>
                     <a href="autres/infos.html"><button type="submit" class="g box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow">GET MORE INFORMATIONS</button></a>
