--- a/autres/saturday.html
+++ b/autres/saturday.html
@@ -39,8 +39,8 @@
   <div class="text-center text-white ">
     <div class="p-5 text-center">
       <h1 class="m-5 titre-autres"> SATURDAY 2nd AUGUST</h1>
-    </div>            <br>
-    <div class=" row row-cols-1 row-cols-lg-5 d-flex justify-content-evenly p-5 ">
+    </div>
+    <div class=" row row-cols-1 row-cols-lg-5 d-flex justify-content-evenly  ">
       <a href="lineup.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100 text-center  ">All</button></a>
       <a href="friday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Friday 1st</button></a>
       <a href="saturday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Saturday 2nd</button></a>
