--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -40,7 +40,7 @@
             <div class="p-5 text-center">
                 <h1 class="m-5 titre-autres"> ALL LINE-UP </h1>
             </div>
-            <div class=" row row-cols-1 row-cols-lg-5 d-flex justify-content-evenly  ">
+            <div class=" row row-cols-1 row-cols-lg-5 d-flex justify-content-evenly  p-5">
                 <a href="lineup.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100 text-center  ">All</button></a>
                 <a href="friday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Friday 1st</button></a>
                 <a href="saturday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Saturday 2nd</button></a>
