--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
     <main class="d-flex flex-column">
         <div class=" text-center">
             <div class="p-5">
-                <h1 class="mt-5 mb-5 titre"> EFREI'STIVAL</h1>
-                <h2 class="m-5 date"> 1st, 2nd and 3rd august 2025</h2>
+                <h1 class="mt-5 m-5 titre"> EFREI'STIVAL</h1>
+                <h2 class="me-5 ms-5 mt-5 date"> 1st, 2nd and 3rd of August 2025</h2>
                 <br>
             </div>
 
             <div class=" text-white  p-5 vh-60  ">
                 <div class=" row  row-cols-1 row-cols-lg-5 d-flex justify-content-evenly ">
-                    <a href="autres/ticket.html"><button type="submit" class="t box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow ">RESERVE YOUR PLACES</button></a>
+                    <a href="autres/ticket.html"><button type="submit" class="t box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow ">GET YOUR TICKETS</button></a>
                     <a href="autres/lineup.html"><button type="submit" class="d box col mt-2 mb-2  p-4 w-100  text-center border border-5  shadow ">DISCOVER THE LINE-UP</button></a>
-                    <a href="autres/volunteer.html"><button type="submit" class="b box col mt-2 mb-2  p-4 w-100  text-center border border-5  shadow">BECOME VOLUNTEER</button></a>
-                    <a href="autres/infos.html"><button type="submit" class="g box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow">GET MORE INFORMATIONS</button></a>
+                    <a href="autres/volunteer.html"><button type="submit" class="b box col mt-2 mb-2  p-4 w-100  text-center border border-5  shadow">BECOME A VOLUNTEER</button></a>
+                    <a href="autres/infos.html"><button type="submit" class="g box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow"> MORE INFORMATIONS</button></a>
                 </div>
             </div>
 
-            <div class=" text-white  p-5 vh-60  shadow ">
+            <div class=" text-white  p-5 vh-60  ">
                 <h1 class="mb-5"> JOIN US IN : </h1>
                 <div id="countdown">
                     <div id="timer">
