--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <!-- ========== main ========== -->
 
     <main class="d-flex flex-column">
-        <div class=" text-center">
-            <div class="p-5">
-                <h1 class="mt-5 m-5 titre"> EFREI'STIVAL</h1>
-                <h2 class="me-5 ms-5 mt-5 date"> 1st, 2nd and 3rd of August 2025</h2>
+        <div class=" text-center vh-100%">
+            <div class="pe-5 pt-5 ps-5">
+                <h1 class="mt-5 mb-5 titre"> EFREI'STIVAL</h1>
+                <h5 class="me-5 ms-5 date "> 1st, 2nd and 3rd of August 2025</h5>
                 <br>
             </div>
 
-            <div class=" text-white  p-5 vh-60  ">
+            <div class=" text-white mb-5 p-5 vh-60  ">
                 <div class=" row  row-cols-1 row-cols-lg-5 d-flex justify-content-evenly ">
                     <a href="autres/ticket.html"><button type="submit" class="t box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow ">GET YOUR TICKETS</button></a>
                     <a href="autres/lineup.html"><button type="submit" class="d box col mt-2 mb-2  p-4 w-100  text-center border border-5  shadow ">DISCOVER THE LINE-UP</button></a>
